[project]
name = "payment-gateway"
version = "0.1.0"
description = "Stateless payment gateway: epay protocol -> Alipay/WeChat Pay"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-alipay-sdk>=3.3.0",
    "wechatpayv3>=1.3.5",
    "qrcode[pil]>=7.4.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "freezegun>=1.5.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "ASYNC", "BLE"]
# S101: assert is fine in tests
# S104: 0.0.0.0 is intentional for the listening default (containers)
# ASYNC109: we mirror httpx's AsyncClient API which uses `timeout=` directly
# S324: epay protocol mandates MD5 — not a security choice we can make
ignore = ["S101", "S104", "ASYNC109", "S324"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311"]
"app/routers/submit.py" = ["E501"]  # embedded CSS template

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
